--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Christopher Jeffrey <chjjeffrey@gmail.com>",
   "main": "./lib/bstring.js",
   "scripts": {
-    "install": "node-gyp rebuild || echo 'Build failed.'",
+    "install": "node-gyp rebuild || (echo 'Build failed.' && exit 1)",
     "browserify": "browserify -s bstring lib/bstring.js | uglifyjs -c > bstring.js",
     "clean": "rm -f bstring.js",
     "lint": "eslint lib/ test/ || exit 0",
