--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "keywords": [
     "string",
     "base58",
-    "bech32"
+    "bech32",
+    "cashaddr"
   ],
   "license": "MIT",
   "repository": "git://github.com/bcoin-org/bstring.git",
@@ -22,7 +23,7 @@
   },
   "dependencies": {
     "bindings": "~1.3.0",
-    "bsert": "~0.0.4",
+    "bsert": "~0.0.3",
     "nan": "~2.10.0"
   },
   "devDependencies": {
