--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "bindings": "~1.3.0",
     "bsert": "~0.0.3",
-    "nan": "~2.10.0"
+    "nan": "~2.10.0",
+    "n64": "^0.1.2"
   },
   "devDependencies": {
     "eslint": "^5.1.0",
