--- a/package.json
+++ b/package.json
@@ -17,30 +17,17 @@
   "main": "./lib/bstring.js",
   "scripts": {
     "install": "node-gyp rebuild || echo 'Build failed.'",
-    "browserify": "browserify -s bstring lib/bstring.js | uglifyjs -c > bstring.js",
-    "clean": "rm -f bstring.js",
     "lint": "eslint lib/ test/ || exit 0",
-    "test": "mocha --reporter spec test/*-test.js",
-    "webpack": "webpack --mode production --config webpack.config.js"
+    "test": "mocha --reporter spec test/*-test.js"
   },
   "dependencies": {
     "bindings": "~1.3.0",
+    "bsert": "~0.0.3",
     "nan": "~2.10.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babelify": "^8.0.0",
-    "browserify": "^16.2.2",
-    "eslint": "^4.19.1",
-    "mocha": "^5.2.0",
-    "uglify-es": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.11.1",
-    "webpack-cli": "^3.0.3"
+    "eslint": "^5.1.0",
+    "mocha": "^5.2.0"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -49,10 +36,5 @@
   "browser": {
     "./lib/base58": "./lib/base58-browser.js",
     "./lib/bech32": "./lib/bech32-browser.js"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
   }
 }
