--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "install": "node-gyp rebuild || echo 'Build failed.'",
     "lint": "eslint lib/ test/ || exit 0",
-    "test": "mocha --reporter spec test/*-test.js"
+    "test": "mocha --reporter spec test/*-test.js",
+    "test-file": "mocha --reporter spec"
   },
   "dependencies": {
     "bindings": "~1.3.0",
