--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "scripts": {
     "install": "node-gyp rebuild || echo 'Build failed.'",
     "lint": "eslint lib/ test/ || exit 0",
-    "test": "mocha --reporter spec test/*-test.js",
-    "test-file": "mocha --reporter spec"
+    "test": "bmocha --reporter spec test/*-test.js",
+    "test-file": "bmocha --reporter spec"
   },
   "dependencies": {
     "bindings": "~1.3.1",
@@ -28,7 +28,7 @@
     "nan": "~2.11.1"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "bmocha": "^0.1.0"
   },
   "engines": {
     "node": ">=8.0.0"
