--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "test-file": "bmocha --reporter spec"
   },
   "dependencies": {
-    "bindings": "~1.3.1",
     "bsert": "~0.0.10",
-    "nan": "~2.12.1"
+    "loady": "~0.0.1",
+    "nan": "^2.13.1"
   },
   "devDependencies": {
     "bmocha": "^2.1.0"
